# simtest

./: CMakeCache.txt  CMakeLists.txt  Dockerfile.devel  Dockerfile.stable  Makefile  README.md  cmake_install.cmake  shell.nix  test_01  test_01.cpp  test_01.hpp  test_02.cpp
.devcontainer/: devcontainer.json
.devcontainer/codespaces/: devcontainer.json
